==> wagiminator/Development-Boards/STM32C011F4P6_DevBoard/software/crc/include/system.c <==
#include "system.h"

void SYS_init(void) {
  // Init system clock
  #if SYS_CLK_INIT > 0
  #if F_CPU > 24000000
  FLASH->ACR |= 0b001;                          // FLASH latency: one wait state
  #endif
  CLK_init();
  #endif

  // Init SYSTICK
  #if SYS_TICK_INIT > 0
  SysTick->CTRL = SysTick_CTRL_ENABLE | SysTick_CTRL_CLKSOURCE;
  #endif

  // Enable GPIO
  #if SYS_GPIO_EN > 0
  RCC->IOPENR = RCC_IOPENR_GPIOAEN | RCC_IOPENR_GPIOBEN | RCC_IOPENR_GPIOCEN
              | RCC_IOPENR_GPIODEN | RCC_IOPENR_GPIOFEN;
  #endif
}

void CLK_reset(void) {
  RCC->CR |= RCC_CR_HSION;                                // enable HSI, no divider
  while(!(RCC->CR & RCC_CR_HSIRDY));                      // wait for HSI ready
  RCC->CFGR = 0x00000000;                                 // HSI as system clock source
  while(RCC->CFGR & RCC_CFGR_SWS_Msk);                    // wait until switched to HSI
  RCC->ICSCR = (RCC->ICSCR & ~RCC_ICSCR_HSITRIM) | 0x4000;// reset ICSCR register
  RCC->CR      = 0x00001500;                              // keep only HSI on, 12MHz
  RCC->CIER    = 0x00000000;                              // disable all interrupts
  RCC->CICR    = 0xffffffff;                              // clear all interrupt flags
  FLASH->ACR  &= ~(uint32_t)0b111;                        // reset flash latency
}

void DLY_ticks(uint32_t n) {
  SysTick->LOAD = n;
  SysTick->VAL  = 0;
  while(!(SysTick->CTRL & SysTick_CTRL_COUNTFLAG));
}

void STOP_WFI_now(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  EXTI->RPR1 = 0xffffffff;              // clear all EXTI rising edge pending flags
  EXTI->FPR1 = 0xffffffff;              // clear all EXTI falling edge pending flags
  PWR->CR1 &= ~PWR_CR1_LPMS;            // set low-power mode to stop
  __WFI();                              // wait for interrupt
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
}

void STOP_WFE_now(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  EXTI->RPR1 = 0xffffffff;              // clear all EXTI rising edge pending flags
  EXTI->FPR1 = 0xffffffff;              // clear all EXTI falling edge pending flags
  PWR->CR1 &= ~PWR_CR1_LPMS;            // set low-power mode to stop
  __WFE();                              // wait for event
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
}

void STDBY_WFI_now(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  PWR->CR1 = (PWR->CR1 & ~PWR_CR1_LPMS)
           | (0b011<<PWR_CR1_LPMS_Pos); // set low-power mode to standby
  PWR->SCR = 0b111111;                  // clear WUFx bits
  RTC->SCR = 0b111111;                  // clear RTC interrupt flags
  __WFI();                              // wait for interrupt
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
}

void STDBY_WFE_now(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  EXTI->RPR1 = 0xffffffff;              // clear all EXTI rising edge pending flags
  EXTI->FPR1 = 0xffffffff;              // clear all EXTI falling edge pending flags
  PWR->CR1 = (PWR->CR1 & ~PWR_CR1_LPMS)
           | (0b011<<PWR_CR1_LPMS_Pos); // set low-power mode to standby
  PWR->SCR = 0b111111;                  // clear WUFx bits
  RTC->SCR = 0b111111;                  // clear RTC interrupt flags
  __WFE();                              // wait for event
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
}

void BOOT_now(void) {
  void (*SysMemBootJump)(void);
  __disable_irq();                      // disable all interrupts
  SysTick->CTRL = 0;                    // disable SysTick Timer
  CLK_reset();                          // reset system clock settings
  NVIC->ICER[0]=0xffffffff;             // clear interrupt enable register
  NVIC->ICPR[0]=0xffffffff;             // clear interrupt pending register
  __enable_irq();                       // re-enable all interrupts
  SysMemBootJump = (void (*)(void)) (*((uint32_t *) ((BOOT_ADDR + 4))));
  __set_MSP(*(uint32_t *)BOOT_ADDR);    // set main stack pointer for bootloader
  SysMemBootJump();                     // jump to bootloader
  while(1);                             // just be sure
}

void Reset_Handler(void) {
  uint32_t *src, *dst;

  // Set stack pointer
  asm volatile(
  " ldr r0, =_estack  \n\
    mov sp, r0        \n"
    : : : "r0", "memory"
  );

  // Configure vector table location
  SCB->VTOR = (uint32_t)vectors;

  // Copy data from FLASH to RAM
  src = &_sidata;
  dst = &_sdata;
  while(dst < &_edata) *dst++ = *src++;

  // Clear uninitialized variables
  #if SYS_CLEAR_BSS > 0
  dst = &_sbss;
  while(dst < &_ebss) *dst++ = 0;
  #endif

  // Init system
  SYS_init();

  // C++ Support
  #ifdef __cplusplus
  __libc_init_array();
  #endif

  // Start main function
  main();
  while(1);
}
