==> wagiminator/Development-Boards/CH32X035F7P6_DevBoard/software/oled_sinewave/src/system.c <==
#include "system.h"

void SYS_init(void) {

  // Init system clock
  #if SYS_CLK_INIT > 0
    #if F_CPU <= 12000000
      //FLASH->ACTLR = FLASH_ACTLR_LATENCY_0;
    #elif F_CPU <= 24000000
      FLASH->ACTLR = FLASH_ACTLR_LATENCY_1;
    #else
      FLASH->ACTLR = FLASH_ACTLR_LATENCY_2;
    #endif
    RCC->CFGR0 = SYS_CLK_DIV;
  #endif

  // Init SYSTICK
  #if SYS_TICK_INIT > 0
    STK_init();
  #endif

  // Enable GPIO
  #if SYS_GPIO_EN > 0
    RCC->APB2PCENR = RCC_IOPAEN | RCC_IOPBEN | RCC_IOPCEN;
  #endif
}

void CLK_reset(void) {
  RCC->CTLR   |= (uint32_t)0x00000001;
  RCC->CFGR0   = (uint32_t)0x00000050;
  FLASH->ACTLR = (uint32_t)0x00000000;
}

void DLY_ticks(uint32_t n) {
  uint32_t end = STK->CNTL + n;
  while(((int32_t)(STK->CNTL - end)) < 0);
}

void BOOT_now(void) {
  FLASH->KEYR = FLASH_KEY1;
  FLASH->KEYR = FLASH_KEY2;
  FLASH->BOOT_MODEKEYR = FLASH_KEY1;
  FLASH->BOOT_MODEKEYR = FLASH_KEY2;      // unlock flash
  FLASH->STATR = FLASH_STATR_BOOT_MODE;   // start bootloader after software reset
  FLASH->CTLR  = FLASH_CTLR_LOCK;         // lock flash
  RCC->RSTSCKR = RCC_RMVF;                // clear reset flags
  PFIC->SCTLR  = PFIC_SYSRESET;           // perform software reset
}

void STOP_WFI_now(void) {
  PFIC->SCTLR |= PFIC_SLEEPDEEP;          // set power-down mode to STOP
  __WFI();                                // wait for interrupt
}

void STOP_WFE_now(void) {
  PFIC->SCTLR |= PFIC_SLEEPDEEP;          // set power-down mode to STOP
  __WFE();                                // wait for event
}

void STDBY_WFI_now(void) {
  RCC->APB1PCENR |= RCC_PWREN;            // enable power module
  PWR->CTLR      |= PWR_CTLR_PDDS;        // set power-down mode to STANDBY
  PFIC->SCTLR    |= PFIC_SLEEPDEEP;
  __WFI();                                // wait for interrupt
  PWR->CTLR      &= ~PWR_CTLR_PDDS;       // reset power-down mode
}

void STDBY_WFE_now(void) {
  RCC->APB1PCENR |= RCC_PWREN;            // enable power module
  PWR->CTLR      |= PWR_CTLR_PDDS;        // set power-down mode to STANDBY
  PFIC->SCTLR    |= PFIC_SLEEPDEEP;
  __WFE();                                // wait for event
  PWR->CTLR      &= ~PWR_CTLR_PDDS;       // reset power-down mode
}

void reset_handler(void) {
  uint32_t *src, *dst;
  
  // Set pointers, vectors, processor status, and interrupts
  asm volatile(
  " .option push              \n\
    .option norelax           \n\
    la gp, __global_pointer$  \n\
    .option pop               \n\
    la sp, _eusrstack         \n"
    #if __GNUC__ > 10
    ".option arch, +zicsr     \n"
    #endif
  " li a0, 0x1f               \n\
    csrw 0xbc0, a0            \n\
    li a0, 0x88               \n\
    csrs mstatus, a0          \n\
    li a1, 0x3                \n\
    csrw 0x804, a1            \n\
    la a0, vectors            \n\
    or a0, a0, a1             \n\
    csrw mtvec, a0            \n\
    csrw mepc, %[main]        \n"
    : : [main] "r" (main) : "a0", "a1" , "memory"
  );

  // Copy data from FLASH to RAM
  src = &_data_lma;
  dst = &_data_vma;
  while(dst < &_edata) *dst++ = *src++;

  // Clear uninitialized variables
  #if SYS_CLEAR_BSS > 0
  dst = &_sbss;
  while(dst < &_ebss) *dst++ = 0;
  #endif

  // C++ Support
  #ifdef __cplusplus
  __libc_init_array();
  #endif

  // Init system
  SYS_init();

  // Return
  asm volatile("mret");
}
